--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@codefeathers/cmd-js",
   "version": "0.5.0",
   "description": "Super simple cli framework for nodejs.",
-  "main": "index.js",
+  "main": "es6/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
